fix gulp tasks and fix readme

--- a/src/app/css/styles.css
+++ b/src/app/css/styles.css
@@ -1,1 +1,2 @@
-body{background:#000}h1{color:red}
+body{background:#000}.hello,h1{color:red}.hello{font-size:13px}
+/*# sourceMappingURL=styles.css.map */
