--- a/src/app/index.html
+++ b/src/app/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <title>Hello</title>
     <link rel="stylesheet" href="css/styles.css">
+    <script src="scripts/all.js"></script>
 </head>
 <body>
     <h1>hello world!</h1>
+    <h2>Test</h2>
 </body>
 </html>
