--- a/src/app/index.html
+++ b/src/app/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Hello</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css" />
     <script src="scripts/all.js"></script>
-</head>
-<body>
+  </head>
+  <body>
     <h1>hello world!</h1>
     <h2>Test</h2>
-</body>
+  </body>
 </html>
