--- a/src/app/index.html
+++ b/src/app/index.html
@@ -7,7 +7,7 @@
     <script src="scripts/all.js"></script>
   </head>
   <body>
-    <h1>hello world!</h1>
+    <h1>hello <span class="yellow-part">world</span>!</h1>
     <h2>Test</h2>
     <p>hello</p>
   </body>
