--- a/src/app/scss/base/_typography.scss
+++ b/src/app/scss/base/_typography.scss
@@ -1,44 +1,45 @@
 @import '../utils/variables';
 
-
 // Header Font
 @font-face {
-    font-family: 'Norwester';
-    src: url('../../fonts/norwester.otf');
-    
+  font-family: 'Norwester';
+  src: url('../../fonts/norwester.otf');
 }
 
 // Subheader Font
 @font-face {
-    font-family: 'Montserrat-SemiBold';
-    src: url("../../fonts/Montserrat-SemiBold.ttf");
+  font-family: 'Montserrat-SemiBold';
+  src: url('../../fonts/Montserrat-SemiBold.ttf');
 }
 
 // Body Font
 @font-face {
-    font-family: 'Montserrat-Regular';
-    src: url('../../fonts/Montserrat-Regular.ttf');
+  font-family: 'Montserrat-Regular';
+  src: url('../../fonts/Montserrat-Regular.ttf');
 }
 
 .yellow-part {
-    color: var(--secondary);
+  color: var(--secondary);
 }
 
 h1 {
-    font-size: 48px;
-    font-family: Norwester;
-    font-weight: 500;
-    color: var(--accent)
+  font-size: 48px;
+  font-family: Norwester;
+  font-weight: 500;
+  color: var(--accent);
+  @include spacing(margin, 0, 0, 5, 0);
 }
 
 h2 {
-    font-size: 24px;
-    font-family: Montserrat-SemiBold;
-    color: var(--accent)
+  font-size: 24px;
+  font-family: Montserrat-SemiBold;
+  color: var(--accent);
+  @include spacing(margin, 0, 0, 4, 0);
 }
 
 p {
-    font-size: 18px;
-    font-family: Montserrat-Regular;
-    color: var(--accent)
+  font-size: 18px;
+  font-family: Montserrat-Regular;
+  color: var(--accent);
+  @include spacing(margin, 0, 0, 3, 0);
 }
