add styles for buttons

--- a/src/app/scss/utils/_variables.scss
+++ b/src/app/scss/utils/_variables.scss
@@ -26,4 +26,6 @@ $spacings: (
   --primary: #2b2a28;
   --secondary: #feed01;
   --accent: #fff7e6;
+  --button-black: #3a3937;
+  --button-white: #fff7e6;
 }
