--- a/src/app/index.html
+++ b/src/app/index.html
@@ -10,5 +10,15 @@
     <h1>hello <span class="yellow-part">world</span>!</h1>
     <h2>Test</h2>
     <p>hello</p>
+
+    <button class="base-button"><i class="icon">A</i>Submit</button>
+    <a href="#" class="base-button">Hello World Anchor</a>
+
+    <button class="base-button black-button">
+      <i class="icon">A</i>Google
+    </button>
+    <button class="base-button white-button">
+      <i class="icon">A</i>Facebook
+    </button>
   </body>
 </html>
