--- a/src/app/scss/styles.scss
+++ b/src/app/scss/styles.scss
@@ -1,7 +1,13 @@
+// Utils
 @import 'utils/variables';
 @import 'utils/mixins';
+
+// Base
 @import 'base/reset';
+@import 'base/fonts';
 @import 'base/typography';
+
+// Components
 @import 'components/buttons';
 
 body {
