--- a/src/app/index.html
+++ b/src/app/index.html
@@ -10,5 +10,20 @@
     <h1>hello <span class="yellow-part">world</span>!</h1>
     <h2>Test</h2>
     <p>hello</p>
+
+    <section class="services">
+      <h1 class="services-title">Our Services</h1>
+
+      <article class="services-wrapper">
+        <section class="service">
+          <img src="images/icons/wrench.svg" />
+          <h2 class="service-title">Bike Repair</h2>
+          <p class="service-about">
+            Have your bike repaired and maintained by a professional for a
+            reasonable price
+          </p>
+        </section>
+      </article>
+    </section>
   </body>
 </html>
