--- a/src/app/index.html
+++ b/src/app/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Scorpion Bike Website for repairing, buying and selling bikes."
+    />
     <title>Hello</title>
     <link rel="stylesheet" href="css/styles.css" />
     <script src="scripts/all.js"></script>
@@ -12,15 +17,60 @@
     <p>hello</p>
 
     <section class="services">
-      <h1 class="services-title">Our Services</h1>
+      <h1 class="services-title underline">Our Services</h1>
 
       <article class="services-wrapper">
         <section class="service">
-          <img src="images/icons/wrench.svg" />
-          <h2 class="service-title">Bike Repair</h2>
+          <section class="service-icon-wrapper">
+            <img
+              class="service-icon"
+              src="images/icons/wrench.svg"
+              width="89"
+              height="88"
+              alt="Wrench Icon"
+            />
+          </section>
+
+          <h2 class="service-title underline">Bike Repair</h2>
           <p class="service-about">
             Have your bike repaired and maintained by a professional for a
             reasonable price
+          </p>
+        </section>
+
+        <section class="service">
+          <section class="service-icon-wrapper">
+            <img
+              class="service-icon"
+              src="images/icons/bicycle.svg"
+              width="89"
+              height="88"
+              alt="Wrench Icon"
+            />
+          </section>
+
+          <h2 class="service-title underline">Buy Second Hand</h2>
+          <p class="service-about">
+            Find your perfect bike ready to go. The prices are low and the
+            quality is high
+          </p>
+        </section>
+
+        <section class="service">
+          <section class="service-icon-wrapper">
+            <img
+              class="service-icon"
+              src="images/icons/money.svg"
+              width="89"
+              height="88"
+              alt="Wrench Icon"
+            />
+          </section>
+
+          <h2 class="service-title underline">Sell Second Hand</h2>
+          <p class="service-about">
+            You don’t need your bike anymore? Let us buy it and find its new
+            owner
           </p>
         </section>
       </article>
