--- a/src/app/scss/base/_typography.scss
+++ b/src/app/scss/base/_typography.scss
@@ -2,19 +2,19 @@
 
 // Header Font
 @font-face {
-  font-family: 'Norwester';
+  font-family: 'Norwester', sans-serif;
   src: url('../../fonts/norwester.otf');
 }
 
 // Subheader Font
 @font-face {
-  font-family: 'Montserrat-SemiBold';
+  font-family: 'Montserrat-SemiBold', sans-serif;
   src: url('../../fonts/Montserrat-SemiBold.ttf');
 }
 
 // Body Font
 @font-face {
-  font-family: 'Montserrat-Regular';
+  font-family: 'Montserrat-Regular', sans-serif;
   src: url('../../fonts/Montserrat-Regular.ttf');
 }
 
@@ -23,23 +23,35 @@
 }
 
 h1 {
-  font-size: 48px;
-  font-family: Norwester;
+  font-size: 38px;
+  font-family: Norwester, sans-serif;
   font-weight: 500;
   color: var(--accent);
   @include spacing(margin, 0, 0, 5, 0);
+
+  @include breakpoint(m) {
+    font-size: 48px;
+  }
 }
 
 h2 {
-  font-size: 24px;
-  font-family: Montserrat-SemiBold;
+  font-size: 20px;
+  font-family: Montserrat-SemiBold, sans-serif;
   color: var(--accent);
   @include spacing(margin, 0, 0, 4, 0);
+
+  @include breakpoint(m) {
+    font-size: 24px;
+  }
 }
 
 p {
-  font-size: 18px;
-  font-family: Montserrat-Regular;
+  font-size: 16px;
+  font-family: Montserrat-Regular, sans-serif;
   color: var(--accent);
   @include spacing(margin, 0, 0, 3, 0);
+
+  @include breakpoint(m) {
+    font-size: 18px;
+  }
 }
