fixed img alt text

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -55,7 +55,7 @@
               src="images/icons/bicycle.svg"
               width="89"
               height="88"
-              alt="Wrench Icon"
+              alt="Bicycle Icon"
             />
           </section>
 
@@ -73,7 +73,7 @@
               src="images/icons/money.svg"
               width="89"
               height="88"
-              alt="Wrench Icon"
+              alt="Money Icon"
             />
           </section>
 
