add popup and fixed some of the css

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -9,7 +9,6 @@
     />
     <title>Hello</title>
     <link rel="stylesheet" href="css/styles.css" />
-    <script src="scripts/all.js"></script>
   </head>
   <body>
     <h1>hello <span class="yellow-part">world</span>!</h1>
@@ -81,9 +80,37 @@
           <p class="service-about">
             You don’t need your bike anymore? Let us buy it and find its new
             owner
+
+            <span class="service-about-popup">
+              <img
+                class="service-about-popup-icon"
+                src="images/icons/info.svg"
+                width="26"
+                height="26"
+                alt="Info Icon"
+              />
+              <span class="service-about-popup-text">
+                <img
+                  class="service-about-popup-close"
+                  src="images/icons/cancel.svg"
+                  alt="Cancel Icon"
+                  width="16"
+                  height="16"
+                />
+                To sell a bike we need to know it is yours. You can check that
+                by finding the serial code located somewhere on the bike and
+                putting it into the police website.
+
+                <a href="https://politi.dk/" target="_blank" rel="noopener">
+                  https://politi.dk/</a
+                >
+              </span>
+            </span>
           </p>
         </section>
       </article>
     </section>
+
+    <script src="scripts/all.js"></script>
   </body>
 </html>
