--- a/src/app/scss/styles.scss
+++ b/src/app/scss/styles.scss
@@ -7,9 +7,9 @@
 @import 'base/fonts';
 @import 'base/typography';
 
-// Components
-@import 'components/services';
-@import 'components/buttons';
+// Layout
+@import 'layout/services';
+@import 'layout/buttons';
 
 body {
   background: var(--primary);
