add footer for mobile and desktop

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -1,24 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Hello</title>
-    <link rel="stylesheet" href="css/styles.css" />
-    <script src="scripts/all.js"></script>
-  </head>
-  <body>
-    <h1>hello <span class="yellow-part">world</span>!</h1>
-    <h2>Test</h2>
-    <p>hello</p>
 
-    <button class="base-button"><i class="icon">A</i>Submit</button>
-    <a href="#" class="base-button">Hello World Anchor</a>
+<head>
+  <meta charset="UTF-8" />
+  <title>Hello</title>
+  <link rel="stylesheet" href="css/styles.css" />
+  <script src="scripts/all.js"></script>
+</head>
 
-    <button class="base-button black-button">
-      <i class="icon">A</i>Google
-    </button>
-    <button class="base-button white-button">
-      <i class="icon">A</i>Facebook
-    </button>
-  </body>
+<body>
+  <h1>hello <span class="yellow-part">world</span>!</h1>
+  <h2>Test</h2>
+  <p>hello</p>
+
+  <button class="base-button"><i class="icon">A</i>Submit</button>
+  <a href="#" class="base-button">Hello World Anchor</a>
+
+  <button class="base-button black-button">
+    <i class="icon">A</i>Google
+  </button>
+  <button class="base-button white-button">
+    <i class="icon">A</i>Facebook
+  </button>
+
+  <footer>
+    <section class="first-part">
+      <section class="logo-section">
+        <img src="./images/logo.png" alt="">
+      </section>
+
+      <section class="working-hours">
+        <article>
+          <p>MON - THU</p>
+          <hr>
+          <p>8:30 - 5:00</p>
+        </article>
+
+        <article>
+          <p>FRI</p>
+          <hr>
+          <p>8:30 - 4:00</p>
+        </article>
+
+        <article>
+          <p>SAT</p>
+          <hr>
+          <p>9:00 - 1:00</p>
+        </article>
+      </section>
+
+      <section class="connect">
+        <article class="phone">
+          <a href="tel:+4591548718"><img src="./images/icons/phone.svg" alt="phone icon"></a>
+          <a href="tel:+4591548718">
+            <p>+45 91 54 87 18</p>
+          </a>
+        </article>
+        <article class="email">
+          <a href="mailto:scorpiobike01@gmail.com"><img src="./images/icons/email.svg" alt="email icon"></a>
+          <a href="mailto:scorpiobike01@gmail.com">
+            <p>scorpiobike01@gmail.com</p>
+          </a>
+        </article>
+      </section>
+    </section>
+
+    <hr />
+
+    <section class="second-part">
+      <article class="social-icons">
+        <img src="./images/icons/facebook.svg" alt="facebook icon">
+        <img src="./images/icons/instagram.svg" alt="instagram icon">
+        <!-- TODO Change to google icon, we don't have it rn -->
+        <img src="./images/icons/messanger.svg" alt="messanger icon">
+      </article>
+
+      <!-- Make it copyright scorpibike and made by peekembrace -->
+      <p class="copyright-text">Copyright PeekEmbrace 2021</p>
+    </section>
+  </footer>
+</body>
+
 </html>
