add code improvements

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -26,7 +26,7 @@
   <footer>
     <section class="first-part">
       <section class="logo-section">
-        <img src="./images/logo.png" alt="">
+        <img width="131" height="139" src="./images/logo.png" alt="">
       </section>
 
       <section class="working-hours">
@@ -69,10 +69,10 @@
 
     <section class="second-part">
       <article class="social-icons">
-        <img src="./images/icons/facebook.svg" alt="facebook icon">
-        <img src="./images/icons/instagram.svg" alt="instagram icon">
+        <img height="52" width="52" src="./images/icons/facebook.svg" alt="facebook icon">
+        <img height="52" width="52" src="./images/icons/instagram.svg" alt="instagram icon">
         <!-- TODO Change to google icon, we don't have it rn -->
-        <img src="./images/icons/messanger.svg" alt="messanger icon">
+        <img height="52" width="52" src="./images/icons/messanger.svg" alt="messanger icon">
       </article>
 
       <!-- Make it copyright scorpibike and made by peekembrace -->
