fix mobile lighthouse

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -51,13 +51,14 @@
 
       <section class="connect">
         <article class="phone">
-          <a href="tel:+4591548718"><img src="./images/icons/phone.svg" alt="phone icon"></a>
+          <a href="tel:+4591548718"><img width="39" height="38" src="./images/icons/phone.svg" alt="phone icon"></a>
           <a href="tel:+4591548718">
             <p>+45 91 54 87 18</p>
           </a>
         </article>
         <article class="email">
-          <a href="mailto:scorpiobike01@gmail.com"><img src="./images/icons/email.svg" alt="email icon"></a>
+          <a href="mailto:scorpiobike01@gmail.com"><img width="39" height="38" src="./images/icons/email.svg"
+              alt="email icon"></a>
           <a href="mailto:scorpiobike01@gmail.com">
             <p>scorpiobike01@gmail.com</p>
           </a>
