--- a/src/app/index.html
+++ b/src/app/index.html
@@ -15,8 +15,8 @@
     <h2>Test</h2>
     <p>hello</p>
 
-  <button class="base-button"><i class="icon">A</i>Submit</button>
-  <a href="#" class="base-button">Hello World Anchor</a>
+    <button class="base-button"><i class="icon">A</i>Submit</button>
+    <a href="#" class="base-button">Hello World Anchor</a>
 
     <button class="base-button black-button">
       <i class="icon">A</i>Google
@@ -111,63 +111,92 @@
       </article>
     </section>
 
-  <footer>
-    <section class="first-part">
-      <section class="logo-section">
-        <img width="131" height="139" src="./images/logo.png" alt="">
+    <footer>
+      <section class="first-part">
+        <section class="logo-section">
+          <img width="131" height="139" src="./images/logo.png" alt="" />
+        </section>
+
+        <section class="working-hours">
+          <article>
+            <p>MON - THU</p>
+            <hr />
+            <p>8:30 - 5:00</p>
+          </article>
+
+          <article>
+            <p>FRI</p>
+            <hr />
+            <p>8:30 - 4:00</p>
+          </article>
+
+          <article>
+            <p>SAT</p>
+            <hr />
+            <p>9:00 - 1:00</p>
+          </article>
+        </section>
+
+        <section class="connect">
+          <article class="phone">
+            <a href="tel:+4591548718"
+              ><img
+                width="39"
+                height="38"
+                src="./images/icons/phone.svg"
+                alt="phone icon"
+              />
+              <p>+45 91 54 87 18</p>
+            </a>
+          </article>
+          <article class="email">
+            <a href="mailto:scorpiobike01@gmail.com"
+              ><img
+                width="39"
+                height="38"
+                src="./images/icons/email.svg"
+                alt="email icon"
+              />
+              <p>scorpiobike01@gmail.com</p>
+            </a>
+          </article>
+        </section>
       </section>
 
-      <section class="working-hours">
-        <article>
-          <p>MON - THU</p>
-          <hr>
-          <p>8:30 - 5:00</p>
-        </article>
+      <hr />
 
-        <article>
-          <p>FRI</p>
-          <hr>
-          <p>8:30 - 4:00</p>
-        </article>
-
-        <article>
-          <p>SAT</p>
-          <hr>
-          <p>9:00 - 1:00</p>
-        </article>
-      </section>
-
-      <section class="connect">
-        <article class="phone">
-          <a href="tel:+4591548718"><img width="39" height="38" src="./images/icons/phone.svg" alt="phone icon"></a>
-          <a href="tel:+4591548718">
-            <p>+45 91 54 87 18</p>
+      <section class="second-part">
+        <article class="social-icons">
+          <a href="https://facebook.com" target="_blank" rel="noopener"
+            ><img
+              height="52"
+              width="52"
+              src="./images/icons/facebook.svg"
+              alt="facebook icon"
+            />
+          </a>
+          <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+            ><img
+              height="52"
+              width="52"
+              src="./images/icons/instagram.svg"
+              alt="instagram icon"
+            />
+          </a>
+          <!-- TODO Change to google icon, we don't have it rn -->
+          <a href="https://google.com" target="_blank" rel="noopener">
+            <img
+              height="52"
+              width="52"
+              src="./images/icons/messanger.svg"
+              alt="messanger icon"
+            />
           </a>
         </article>
-        <article class="email">
-          <a href="mailto:scorpiobike01@gmail.com"><img width="39" height="38" src="./images/icons/email.svg"
-              alt="email icon"></a>
-          <a href="mailto:scorpiobike01@gmail.com">
-            <p>scorpiobike01@gmail.com</p>
-          </a>
-        </article>
+
+        <!-- Make it copyright scorpibike and made by peekembrace -->
+        <p class="copyright-text">Copyright PeekEmbrace 2021</p>
       </section>
-    </section>
-
-    <hr />
-
-    <section class="second-part">
-      <article class="social-icons">
-        <img height="52" width="52" src="./images/icons/facebook.svg" alt="facebook icon">
-        <img height="52" width="52" src="./images/icons/instagram.svg" alt="instagram icon">
-        <!-- TODO Change to google icon, we don't have it rn -->
-        <img height="52" width="52" src="./images/icons/messanger.svg" alt="messanger icon">
-      </article>
-
-      <!-- Make it copyright scorpibike and made by peekembrace -->
-      <p class="copyright-text">Copyright PeekEmbrace 2021</p>
-    </section>
-  </footer>
-</body>
-
+    </footer>
+  </body>
 </html>
