removed img tags and put svg instead

--- a/src/app/scss/layout/_services.scss
+++ b/src/app/scss/layout/_services.scss
@@ -44,7 +44,7 @@
       }
 
       &-title {
-        font-family: Norwester;
+        font-family: Norwester, sans-serif;
         font-size: 28px;
 
         @include breakpoint(m) {
