add our clients

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -7,8 +7,29 @@
       name="description"
       content="Scorpio Bike Website for repairing, buying and selling bikes."
     />
-    <title>Hello</title>
+    <title>Scorpio Bike Repair Shop</title>
+
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="images/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="images/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="images/favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="images/favicon/site.webmanifest" />
+
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/tiny-slider.css" />
   </head>
   <body>
     <h1>hello <span class="yellow-part">world</span>!</h1>
@@ -167,6 +188,169 @@
       </article>
     </section>
 
+    <section class="our-clients">
+      <h1 class="our-clients-title underline">Our clients</h1>
+
+      <section class="reviews-wrapper">
+        <article class="review">
+          <img
+            class="reviewer-image"
+            src="images/avatar.png"
+            alt="Reviewer profile image"
+            width="99"
+            height="97"
+          />
+          <p class="reviewer-name">John Doe</p>
+          <section class="reviewer-rating">
+            <img
+              src="images/star.png"
+              alt="Star icon used for the rating"
+              width="15"
+              height="14"
+            />
+            <img
+              src="images/star.png"
+              alt="Star icon used for the rating"
+              width="15"
+              height="14"
+            />
+            <img
+              src="images/star.png"
+              alt="Star icon used for the rating"
+              width="15"
+              height="14"
+            />
+            <img
+              src="images/star.png"
+              alt="Star icon used for the rating"
+              width="15"
+              height="14"
+            />
+            <img
+              src="images/star.png"
+              alt="Star icon used for the rating"
+              width="15"
+              height="14"
+            />
+          </section>
+          <p class="reviewer-comment">
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum has been the industry's standard dummy text
+            ever since the 1500s, when an unknown printer took a galley of type
+          </p>
+          <a href="#" class="base-button">Read On Google</a>
+        </article>
+        <article class="review">
+          <img
+            class="reviewer-image"
+            src="images/avatar.png"
+            alt="Reviewer profile image"
+            width="99"
+            height="97"
+          />
+          <p class="reviewer-name">John Doe</p>
+          <section class="reviewer-rating">
+            <img
+              src="images/star.png"
+              alt="Star icon used for the rating"
+              width="15"
+              height="14"
+            />
+            <img
+              src="images/star.png"
+              alt="Star icon used for the rating"
+              width="15"
+              height="14"
+            />
+            <img
+              src="images/star.png"
+              alt="Star icon used for the rating"
+              width="15"
+              height="14"
+            />
+            <img
+              src="images/star.png"
+              alt="Star icon used for the rating"
+              width="15"
+              height="14"
+            />
+            <img
+              src="images/star.png"
+              alt="Star icon used for the rating"
+              width="15"
+              height="14"
+            />
+          </section>
+          <p class="reviewer-comment">
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum has been the industry's standard dummy text
+            ever since the 1500s, when an unknown printer took a galley of type
+          </p>
+          <a href="#" class="base-button">Read On Google</a>
+        </article>
+        <article class="review">
+          <img
+            class="reviewer-image"
+            src="images/avatar.png"
+            alt="Reviewer profile image"
+            width="99"
+            height="97"
+          />
+          <p class="reviewer-name">John Doe</p>
+          <section class="reviewer-rating">
+            <img
+              src="images/star.png"
+              alt="Star icon used for the rating"
+              width="15"
+              height="14"
+            />
+            <img
+              src="images/star.png"
+              alt="Star icon used for the rating"
+              width="15"
+              height="14"
+            />
+            <img
+              src="images/star.png"
+              alt="Star icon used for the rating"
+              width="15"
+              height="14"
+            />
+            <img
+              src="images/star.png"
+              alt="Star icon used for the rating"
+              width="15"
+              height="14"
+            />
+            <img
+              src="images/star.png"
+              alt="Star icon used for the rating"
+              width="15"
+              height="14"
+            />
+          </section>
+          <p class="reviewer-comment">
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum has been the industry's standard dummy text
+            ever since the 1500s, when an unknown printer took a galley of type
+          </p>
+          <a href="#" class="base-button">Read On Google</a>
+        </article>
+      </section>
+
+      <a href="#" class="base-button black-button our-clients-all-button"
+        >Read All Reviews</a
+      >
+
+      <img
+        class="our-clients-background"
+        src="images/heels.png"
+        alt="Heels illustration with yellow color pallet"
+        width="1276"
+        height="264"
+      />
+    </section>
+
     <footer>
       <section class="first-part">
         <section class="logo-section">
@@ -288,6 +472,7 @@
       </section>
     </footer>
 
+    <script src="scripts/tiny-slider.js"></script>
     <script src="scripts/all.js"></script>
   </body>
 </html>
