--- a/src/app/scss/base/_fonts.scss
+++ b/src/app/scss/base/_fonts.scss
@@ -2,16 +2,19 @@
 @font-face {
   font-family: 'Norwester';
   src: url('../../fonts/norwester.otf');
+  font-display: swap;
 }
 
 // Subheader Font
 @font-face {
   font-family: 'Montserrat-SemiBold';
   src: url('../../fonts/Montserrat-SemiBold.ttf');
+  font-display: swap;
 }
 
 // Body Font
 @font-face {
   font-family: 'Montserrat-Regular';
   src: url('../../fonts/Montserrat-Regular.ttf');
+  font-display: swap;
 }
