resolved some of the comments

--- a/src/app/scss/utils/_variables.scss
+++ b/src/app/scss/utils/_variables.scss
@@ -28,4 +28,6 @@ $spacings: (
   --accent: #fff7e6;
   --button-black: #3a3937;
   --button-white: #fff7e6;
+  --dark-grey: #383838;
+  --onyx-opacity: rgb(14 14 14 / 50%);
 }
