--- a/src/app/scss/layout/_our-clients.scss
+++ b/src/app/scss/layout/_our-clients.scss
@@ -54,10 +54,9 @@
       position: relative;
       text-align: center;
       border-radius: 15px;
-      box-shadow: 4px 2px 9px 5px rgb(14 14 14 / 50%);
-      @include m(0, auto);
+      box-shadow: 4px 2px 9px 5px var(--onyx-opacity);
+      @include m(0, 3);
       background: var(--primary);
-      margin: 0 10px;
 
       @include breakpoint(xs) {
         width: 280px;
@@ -74,7 +73,7 @@
       &::before {
         content: '';
         display: block;
-        background: #383838;
+        background: var(--dark-grey);
         width: 100%;
         height: 80px;
         position: absolute;
