Added container class and made the footer use it instead of width

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -14,7 +14,30 @@
     <h1>hello <span class="yellow-part">world</span>!</h1>
     <h2>Test</h2>
     <p>hello</p>
+    <header class="main-header">
+      <h1>SCORPIO BIKE <span class="yellow-part">REPAIR</span> SHOP</h1>
+      <p></p>
+      <img width="131" height="139" src="./images/logo.png" alt="" />
+      <section class="working-hours">
+        <article>
+          <p>MON - THU</p>
+          <hr />
+          <p>8:30 - 5:00</p>
+        </article>
 
+        <article>
+          <p>FRI</p>
+          <hr />
+          <p>8:30 - 4:00</p>
+        </article>
+
+        <article>
+          <p>SAT</p>
+          <hr />
+          <p>9:00 - 1:00</p>
+        </article>
+      </section>
+    </header>
     <button class="base-button"><i class="icon">A</i>Submit</button>
     <a href="#" class="base-button">Hello World Anchor</a>
 
@@ -167,7 +190,7 @@
       </article>
     </section>
 
-    <footer>
+    <footer class="container">
       <section class="first-part">
         <section class="logo-section">
           <img width="131" height="139" src="./images/logo.png" alt="" />
